Solved ng-scope responsive problem on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 /*this is a custom css stylesheet*/
+@media screen and (max-width: 1024px) {
+  .ng-scope{
+    width: 175%;
+  }
+}
+
 p, a{
   font-family: 'Alegreya Sans', sans-serif;
 }
@@ -11,8 +17,10 @@ h3, h4{
 
  /*navbar styles*/
 
-.navbar{
+.navbar-header{
   background-color: #383838;
+  width: 100%;
+  position: absolute;
 }
 .navbar-brand{
   color: #f8f8f8;
